force-app/main/default/objects/ssot__GameReward__dlm/fields/ssot__ColorText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ColorText__c</fullName>
    <label>Color</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ColorText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>