force-app/main/default/objects/ssot__GameReward__dlm/fields/ssot__GameDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__GameDefinitionId__c</fullName>
    <label>Game Definition</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GameDefinitionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>