force-app/main/default/objects/ssot__GameReward__dlm/fields/ssot__MaximumRewardCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__MaximumRewardCount__c</fullName>
    <label>Maximum Reward Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MaximumRewardCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>