force-app/main/default/objects/ssot__GameReward__dlm/fields/ssot__rel_1729227466976_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729227466976_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GameReward_GameDefinitionId_map_Game_rel</label>
    <referenceTo>ssot__GameDefinition__dlm</referenceTo>
    <relationshipLabel>GameReward_GameDefinitionId_map_Game_rel</relationshipLabel>
    <relationshipName>rel_1729227466976_end</relationshipName>
    <type>Lookup</type>
</CustomField>