force-app/main/default/objects/ssot__GameReward__dlm/fields/ssot__rel_1729831702448_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729831702448_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GameReward_RewardDefinitionId_map_Lo_rel</label>
    <referenceTo>ssot__LoyaltyProgramCurrency__dlm</referenceTo>
    <relationshipLabel>GameReward_RewardDefinitionId_map_Lo_rel</relationshipLabel>
    <relationshipName>rel_1729831702448_end</relationshipName>
    <type>Lookup</type>
</CustomField>