force-app/main/default/objects/ssot__GameReward__dlm/fields/ssot__rel_1729832361052_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729832361052_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GameReward_RewardDefinitionId_map_Vo_rel</label>
    <referenceTo>ssot__VoucherDefinition__dlm</referenceTo>
    <relationshipLabel>GameReward_RewardDefinitionId_map_Vo_rel</relationshipLabel>
    <relationshipName>rel_1729832361052_end</relationshipName>
    <type>Lookup</type>
</CustomField>