force-app/main/default/objects/ssot__GameReward__dlm/fields/ssot__RewardDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RewardDefinitionId__c</fullName>
    <label>Reward Definition</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RewardDefinitionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>