force-app/main/default/objects/ssot__GameReward__dlm/fields/ssot__RewardType__c.field-meta.xml
<CustomField>
    <fullName>ssot__RewardType__c</fullName>
    <label>Reward Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RewardType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>