force-app/main/default/objects/ssot__GameReward__dlm/fields/ssot__RewardValueNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__RewardValueNumber__c</fullName>
    <label>Reward Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RewardValueNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>