force-app/main/default/objects/ssot__GameReward__dlm/fields/ssot__WinProbabilityNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__WinProbabilityNumber__c</fullName>
    <label>Win Probability</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WinProbabilityNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>